[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-usage"
dynamic = ["version"]
description = "Interactive TUI for local Claude Code and Codex token usage, API-equivalent cost, subscription limits, and activity history."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "textual==0.86.0",
    "rich==15.0.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/ZhuoQiuMcgill/cc-usage"
Repository = "https://github.com/ZhuoQiuMcgill/cc-usage"
Issues = "https://github.com/ZhuoQiuMcgill/cc-usage/issues"

[project.optional-dependencies]
dev = ["pytest==9.1.0"]

[project.scripts]
ccusage = "cc_usage.cli:main"

[tool.setuptools]
packages = ["cc_usage"]

[tool.setuptools.dynamic]
version = {attr = "cc_usage.__version__"}

[tool.setuptools.package-data]
cc_usage = ["data/pricing.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
